Adjusted margins and paddings of various elements to avoid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
     padding:0;
 }
 
-html,body{
+/* html,body{
     overflow: hidden;
-}
+} */
 
 body{
     background-color: #f9fafb;
@@ -38,17 +38,16 @@ label{
 
 .logo-container{
     position: absolute;
-    top: 15%;
-    background-color: black;
-    opacity: 0.6;
-    /* background-color: rgba(96, 95, 95, 0.3); */
+    top: 18%;
+    background-color: rgb(5 5 5 / 45%);
     width: 100%;
     padding: 0.5rem 0;
-    /* display: inline-block; */
 }
 
-h1{
+.odin-text{
     color: white;
+    font-family: 'Norse', Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 
 .odin-img{
@@ -73,7 +72,7 @@ h1{
     border-radius: 9px;
     border: none;
     font-size: medium;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
 .create-account-btn:hover{
@@ -108,11 +107,11 @@ p{
 }
 
 .form-section{
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
     background-color: #ffffff;
     margin-left: -47px;
     margin-right: -80px;
-    padding: 1.5rem 3rem;
+    padding: 1.25rem 3rem;
     box-shadow: 0px 4px 5px #dcdddd;
 }
 
